--- a/styles/main.css
+++ b/styles/main.css
@@ -36,10 +36,14 @@ canvas {
   overflow: hidden;
 }
 
+.map-tiles {
+  display: none;
+}
+
 .map-image-wrapper {
   position: absolute;
   transition: 0.3s;
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
 }
 
 .map-image-wrapper.transition {
@@ -62,7 +66,7 @@ canvas {
 .map-cover {
   background-repeat: repeat;
   image-rendering: pixelated;
-  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAADtJREFUWEft10ERADAMArBW9CzPRndTQR/BAFx+dAUz504H+8sAAgQIECBAgAABAgQIECCwQ+CvSD7kB6O0a0FtUcGvAAAAAElFTkSuQmCC);
+  /* background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAADtJREFUWEft10ERADAMArBW9CzPRndTQR/BAFx+dAUz504H+8sAAgQIECBAgAABAgQIECCwQ+CvSD7kB6O0a0FtUcGvAAAAAElFTkSuQmCC); */
   pointer-events: all;
   /* border: 1px solid red; */
 }
@@ -77,13 +81,12 @@ canvas {
   background-size: var(--c); 
   background-repeat: no-repeat;
   image-rendering: pixelated;
-  opacity: 0.05;
+  /* opacity: 0.05; */
 }
 
-.block.missing {
-  /* opacity: 0.5; */
+/* .block.missing {
   border: 1px solid red;
-}
+} */
 
 .sprite-container {
   position: absolute;
