--- a/styles/main.css
+++ b/styles/main.css
@@ -15,9 +15,12 @@ p, h1, h2, h3, h4 {
 }
 
 body {
-  background-color: rgb(23, 7, 94);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(17, 1, 56);
+  font-family: 'Quicksand', sans-serif;
+  /* color:rgb(136, 217, 255); */
   overscroll-behavior: contain;
+  --pink: hotpink;
+  --yellow: rgb(252, 252, 93);
 }
 
 canvas {
@@ -51,12 +54,19 @@ canvas {
   transform: scale(-1, 1);
 }
 
+.overlay {
+  z-index: 1;
+}
+
 .wrapper {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.main {
   pointer-events: none;
 }
 
@@ -239,7 +249,6 @@ canvas {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  /* border: 1px solid white; */
   background-color: rgba(255, 255, 255, 0.3);
 }
 
@@ -247,11 +256,8 @@ canvas {
   position: absolute;
   width: 0;
   height: 0;
-  /* border: 1px solid red; */
   transform: translate(75px, 75px);
   cursor: grab;
-  /* transition: 0.2s; */
-  /* pointer-events: none; */
 }
 
 .control:after {
@@ -268,7 +274,6 @@ canvas {
   image-rendering: pixelated;
   background-repeat: no-repeat;
   background-size: var(--size); 
-  /* transform: translate(27px, 27px); */
 }
 
 .status {
@@ -276,24 +281,28 @@ canvas {
   top: 20px;
   left: 20px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   width: 100%;
-  max-width: 250px;
+  max-width: 800px;
   color: white;
 }
 
 .life-indicator {
-  width: 184px;
-  height: 34px;
-  border: 2px solid rgb(252, 252, 93);
+  width: 180px;
+  height: 20px;
+  background-color: rgb(97, 10, 144);
+  /* border: 2px solid var(--yellow); */
 }
 
 .life {
   width: 180px;
-  height: 30px;
-  background-color: rgb(255, 127, 212);
+  height: 20px;
+  background-color: var(--pink);
   transition: 0.4s;
+}
+
+.catch-indicator {
+  margin: 0 20px;
 }
 
 .blink {
@@ -307,6 +316,53 @@ canvas {
   50% {
     opacity: 0.2;
   }
+}
+
+
+.message-window {
+  position: absolute;
+  background-color: rgba(199, 45, 155, 0.6);
+  /* width: 300px; */
+  height: 220px;
+  letter-spacing: 5px;
+  border-radius: 10px;
+  pointer-events: all;
+  animation: forwards 1s enlarge;
+  transition: 0.5s;
+  transform: scale(1);
+  text-align: center;
+  padding: 30px;
+}
+
+.message-window:has(.hide) {
+  transform: scale(0);
+}
+
+
+.message {
+  color: white;
+  letter-spacing: 3px;
+  font-size: 3em;
+  margin-top: -10px;
+}
+
+.start {
+  position: absolute;
+  bottom: 20px;
+  padding: 8px 20px;
+  border: 0;
+  border-radius: 90px;
+  letter-spacing: 3px;
+  background-color: white;
+  color: var(--pink);
+  font-size: 1em;
+  text-transform: uppercase;
+  font-family: 'Quicksand', sans-serif;
+}
+
+.start:hover {
+  background-color: var(--pink);
+  color: white;
 }
 
 .sign {
