update styling and add random map

--- a/styles/main.css
+++ b/styles/main.css
@@ -31,6 +31,10 @@ canvas {
   align-items: center;
 }
 
+/* .flex {
+  display: flex;
+} */
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -257,7 +261,9 @@ canvas {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.3);
+  /* background-color: rgba(255, 255, 255, 0.3); */
+  background-color: rgba(255, 105, 180, 0.3);
+  /* background-color: #0ee2f1c7; */
 }
 
 .control {
@@ -286,7 +292,7 @@ canvas {
 
 .status {
   position: fixed;
-  top: 20px;
+  top: 24px;
   left: 20px;
   display: flex;
   align-items: center;
@@ -296,22 +302,112 @@ canvas {
 }
 
 .life-indicator {
+  position: relative;
   width: 180px;
   height: 20px;
   /* background-color: #1a1a1a; */
   background-color: #5d5656;
+  /* border-radius: 10px; */
+  /* overflow: hidden; */
+}
+
+.life-indicator:after {
+  position: absolute;
+  content: 'life';
+  font-size: 11px;
+  top: -15px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
 
 .life {
   width: 180px;
   height: 20px;
   background-color: var(--pink);
+  /* border-style: solid;
+  border-top-width: 20px;
+  border-color: var(--pink); */
   transition: 0.4s;
 }
 
 .catch-indicator {
-  margin: 0 20px;
+  display: flex;
+  align-items: center;
+  padding: 0 18px 0 20px;
 }
+
+.time-indicator {
+  display: flex;
+  align-items: center;
+}
+
+.catch-label {
+  display: block;
+  width: var(--size);
+  height: var(--size);
+  image-rendering: pixelated;
+  background-repeat: no-repeat;
+  --size: 32px;
+  background-size: calc(var(--size) * 3); 
+  background-position: calc(var(--size) * -1);
+  margin-top: -3px;
+}
+
+.catch-indicator span {
+  margin: 0 8px 0 4px;
+  --color: #0ee2f1;
+  --transition: 1s;
+}
+
+.time-label {
+  --size: 20px;
+  /* background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAJhJREFUOE+1lGEOgCAIRvMMddlO0GXrDDXbcErgkzb9KfD4QCQtcM71uGuX7dpTL8Q1CkgDvHtJ8gFSgAR6fg0wO1FJulwdU4A9GCWq7XOAEQXeCwvjVRgFWv4FSDCdkHqdIkDyzfZhYFZKIxUCEkxaM/Qo9N/rPs8BjoxOT2X4p1DJJvCvSnc50Fqytow1SvMXrKdE7mkeH38pvin1SURRAAAAAElFTkSuQmCC); */
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAAXNSR0IArs4c6QAAAE9JREFUKFN1kEEOADAEBLv/f7SGhEyVniyDLh08MzNqSUpdgUMsOMBcgEz0htTaChwQzAZ+WybQp/G/40S6zjjAbqaDZebpwt3G8xDeDn4Byblf+1OjRWAAAAAASUVORK5CYII=);
+  background-size: var(--size); 
+  margin-right: 6px;
+}
+
+.time-indicator {
+  position: relative;
+  --transition: 0.5s;
+  --color: hotpink;
+  display: flex;
+  justify-content: center;
+}
+
+.time-indicator:after {
+  position: absolute;
+  content: 'time';
+  font-size: 10px;
+  top: -8px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-align: center;
+  width: 36px;
+}
+
+.no {
+  font-size: 24px;
+}
+
+.no span {
+  display: inline-block;
+  animation: enlarge forwards var(--transition);
+  margin: 0;
+  color: var(--color);
+}
+
+@keyframes enlarge {
+  0%, 100% {
+    transform: scale(1);
+    /* color: var(--color); */
+  }
+  50% {
+    transform: scale(1.3);
+    /* color: var(--color); */
+  }
+}
+
 
 .blink {
   animation: blink infinite 0.5s;
@@ -336,7 +432,7 @@ canvas {
   letter-spacing: 5px;
   border-radius: 10px;
   pointer-events: all;
-  animation: forwards 1s enlarge;
+  /* animation: forwards 1s enlarge; */
   transition: 0.5s;
   transform: scale(1);
   text-align: center;
@@ -377,6 +473,19 @@ canvas {
   color: white;
 }
 
+
+
+.indicator {
+  color: white;
+}
+
+.display {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
+
 .sign {
   position: fixed;
   font-family: Arial, Helvetica, sans-serif;
@@ -401,8 +510,4 @@ a:hover { text-decoration: underline; }
   height: 5px;
   background-color: yellow;
   border-radius: 50%;
-}
-
-.indicator {
-  color: white;
 }
