--- a/styles/main.css
+++ b/styles/main.css
@@ -45,6 +45,8 @@ canvas {
 
 .map-image-wrapper {
   position: absolute;
+  top: 0;
+  left: 0;
   transition: 0.3s;
 }
 
@@ -66,6 +68,7 @@ canvas {
   left: 0;
   width: 100%;
   height: 100%;
+  /* border: 1px solid white; */
 }
 
 .main {
@@ -73,9 +76,15 @@ canvas {
 }
 
 .map-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-repeat: repeat;
   image-rendering: pixelated;
   pointer-events: all;
+  /* border: 1px solid red; */
 }
 
 .item {
