remove unused code and fix cursor bug

--- a/styles/main.css
+++ b/styles/main.css
@@ -139,7 +139,7 @@ canvas {
   background-position: 0 var(--y);
 }
 
-.block.clay {
+.block.square {
   --y: calc(var(--c) * -1);
 }
 
@@ -346,7 +346,7 @@ canvas {
 }
 
 @media screen and (min-width: 400px) {
-  .cursor {
+  .cursor:not(.d-none) {
     display: block;
   }
 }  
