--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@ p, h1, h2, h3, h4 {
 }
 
 body {
-  background-color: #37262e;
+  background-color: #2d1c24;
   font-family: 'Quicksand', sans-serif;
   overscroll-behavior: contain;
   --pink: hotpink;
