--- a/styles/main.css
+++ b/styles/main.css
@@ -340,7 +340,8 @@ canvas {
 }
 
 @media screen and (min-width: 0px) {
-  .cursor {
+  .cursor,
+  .cursor:not(.d-none) {
     display: none;
   }
 }
