--- a/styles/main.css
+++ b/styles/main.css
@@ -339,10 +339,13 @@ canvas {
   image-rendering: pixelated;
 }
 
+.cursor.hide {
+  display: none !important;
+}
+
 @media screen and (min-width: 0px) {
-  .cursor,
-  .cursor:not(.d-none) {
-    display: none;
+  .cursor {
+    display: none !important;
   }
 }
 
